terraform/modules/ec2/main.tf
resource "aws_security_group" "ci_sg" {
  name        = "ci-server-sg"
  description = "CI-Server; open for HTTP, MySQL, Jenkins, SSH"

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "MySQL"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }

  egress {
  from_port   = 0
  to_port     = 0
  protocol    = "-1"
  cidr_blocks = ["0.0.0.0/0"]
  }

resource "aws_instance" "ci_server" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.ci_sg.id]

  tags = {
    Name = "CI-Server"
  }
}


 user_data = <<-EOF
              #!/bin/bash
              set -e
              apt-get update -y
        # Install packages
              apt-get install -y \
                openjdk-17-jdk \
                apache2 \
                mysql-server \
                unzip \
                wget \
                curl \
                gnupg \
                ca-certificates \
                software-properties-common \
                apt-transport-https
        
}
